[gd_scene load_steps=11 format=3 uid="uid://csshn0quynml8"]

[ext_resource type="Texture2D" uid="uid://bn2cgit6f2kx0" path="res://assets/plane/planes_sheet.png" id="1_4ofkd"]
[ext_resource type="Script" path="res://Script/plane.gd" id="1_h35xa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_glygp"]
atlas = ExtResource("1_4ofkd")
region = Rect2(0, 0, 88, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmgf1"]
atlas = ExtResource("1_4ofkd")
region = Rect2(88, 0, 88, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_uce0v"]
atlas = ExtResource("1_4ofkd")
region = Rect2(176, 0, 88, 73)

[sub_resource type="SpriteFrames" id="SpriteFrames_6godg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_glygp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmgf1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uce0v")
}],
"loop": true,
"name": &"fly",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dqh6a"]
size = Vector2(66, 54)

[sub_resource type="Animation" id="Animation_5pcpp"]
resource_name = "power"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.349066, 0.0]
}

[sub_resource type="Animation" id="Animation_bvm4q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ytkt"]
_data = {
"RESET": SubResource("Animation_bvm4q"),
"power": SubResource("Animation_5pcpp")
}

[node name="Plane" type="CharacterBody2D"]
script = ExtResource("1_h35xa")

[node name="AnimSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_6godg")
animation = &"fly"
autoplay = "fly"
frame_progress = 0.364556

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_dqh6a")

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4ytkt")
}

[node name="EngineSound" type="AudioStreamPlayer2D" parent="."]
